force-app/main/default/objects/Proposal__c/fields/SalesStage__c.field-meta.xml
<CustomField>
    <fullName>SalesStage__c</fullName>
    <description>제안영업단계</description>
    <label>Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>핵심 니즈 파악</fullName>
            </value>
            <value>
                <fullName>제안 컨셉 도출</fullName>
            </value>
            <value>
                <fullName>경쟁사 동향 파악</fullName>
            </value>
            <value>
                <fullName>제안서 제출</fullName>
            </value>
            <value>
                <fullName>해당없음</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>