force-app/main/default/objects/Proposal__c/validationRules/TwoWeekvaildCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>TwoWeekvaildCheck</fullName>
    <active>true</active>
    <description>시작일 ~ 종료일 간격 14일 초과 불가</description>
    <errorConditionFormula>EndDateTime__c - StartDateTime__c &gt; 14</errorConditionFormula>
    <errorMessage>이벤트는 14일 이상 지속될 수 없습니다.</errorMessage>
</ValidationRule>